[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/text-1667860441130.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://Sprites/text-1667860451487.png" type="Texture" id=3]
[ext_resource path="res://Sprites/text-1667860445648.png" type="Texture" id=4]
[ext_resource path="res://Sprites/text-1667860456009.png" type="Texture" id=5]
[ext_resource path="res://Sprites/text-1667860466689.png" type="Texture" id=6]
[ext_resource path="res://Sprites/text-1667860461561.png" type="Texture" id=7]
[ext_resource path="res://Sprites/text-1667860472185.png" type="Texture" id=8]
[ext_resource path="res://Sprites/text-1667860477627.png" type="Texture" id=9]
[ext_resource path="res://Sprites/text-1667937339318.png" type="Texture" id=10]
[ext_resource path="res://Sprites/text-1667937358746.png" type="Texture" id=11]

[node name="LevelSelect" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.152941, 0.152941, 1 )

[node name="Button" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 53.0
margin_right = 658.0
margin_bottom = 106.0
icon = ExtResource( 1 )
flat = true

[node name="Button2" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 118.0
margin_right = 663.0
margin_bottom = 171.0
icon = ExtResource( 4 )
flat = true

[node name="Button3" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 185.0
margin_right = 663.0
margin_bottom = 238.0
icon = ExtResource( 3 )
flat = true

[node name="Button4" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 251.0
margin_right = 665.0
margin_bottom = 304.0
icon = ExtResource( 5 )
flat = true

[node name="Button5" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 312.0
margin_right = 665.0
margin_bottom = 365.0
icon = ExtResource( 7 )
flat = true

[node name="Button6" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 372.0
margin_right = 665.0
margin_bottom = 425.0
icon = ExtResource( 6 )
flat = true

[node name="Button7" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 432.0
margin_right = 665.0
margin_bottom = 485.0
icon = ExtResource( 8 )
flat = true

[node name="Button8" type="Button" parent="Control"]
margin_left = 468.0
margin_top = 487.0
margin_right = 665.0
margin_bottom = 540.0
icon = ExtResource( 9 )
flat = true

[node name="CheckBox" type="CheckBox" parent="Control"]
margin_top = 60.0
margin_right = 270.0
margin_bottom = 115.0
icon = ExtResource( 10 )

[node name="CheckBox2" type="CheckBox" parent="Control"]
margin_top = 125.0
margin_right = 324.0
margin_bottom = 180.0
icon = ExtResource( 11 )

[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="Control" method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="Control" method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Button4" to="Control" method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Button5" to="Control" method="_on_Button5_pressed"]
[connection signal="pressed" from="Control/Button6" to="Control" method="_on_Button6_pressed"]
[connection signal="pressed" from="Control/Button7" to="Control" method="_on_Button7_pressed"]
[connection signal="pressed" from="Control/Button8" to="Control" method="_on_Button8_pressed"]
[connection signal="pressed" from="Control/CheckBox" to="Control" method="_on_CheckBox_pressed"]
[connection signal="toggled" from="Control/CheckBox" to="Control" method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Control/CheckBox2" to="Control" method="_on_CheckBox2_pressed"]
[connection signal="toggled" from="Control/CheckBox2" to="Control" method="_on_CheckBox2_toggled"]
